# Chimera_Server

./: .gitignore  .gitmodules  AGENTS.md  AGENT_INSTALL.md  ARCHITECTURE.md  COMPATIBILITY.md  Cargo.toml  LICENSE  README.en.md  README.fa.md  README.md  README.ru.md  build.sh  config_all_combos.json5  config_reality_min.json  config_reality_xray.json5  flake.nix  install.sh  rustfmt.toml  start.sh
.github/workflows/: ci.yml  proxy-throughput.yml  release.yml
.omo/: boulder.json
.omo/drafts/: proxy-throughput-workflow.md
.omo/plans/: proxy-throughput-workflow.md
.omo/run-continuation/: ses_1a02b51f8ffeR9DsMLCN6XxtMY.json
bench/: baseline-throughput.json  echo_server.py  format_throughput.py  throughput.py
bench/configs/: socks-direct.json5  vless-direct.json5  vless-reality.json5
chimera_cli/: Cargo.toml
chimera_cli/src/: main.rs
chimera_server_app/: Cargo.toml
chimera_server_app/src/: main.rs
chimera_server_app/tests/: grpc_all_interfaces_e2e.rs  grpc_external_integration.rs  grpc_xray_compat_e2e.rs  socks_external_integration.rs  xray_client_proxy_e2e.rs
chimera_server_lib/: Cargo.toml  README.md  build.rs
chimera_server_lib/src/: async_stream.rs  config_loader.rs  lib.rs  log.rs  mcp.rs  outbound.rs  routing_state.rs  runtime.rs  traffic.rs  traffic_impl.rs
chimera_server_lib/src/address/: mod.rs
chimera_server_lib/src/beginning/: mod.rs  quic.rs  udp.rs  xhttp.rs
chimera_server_lib/src/config/: README.md  def.rs  mod.rs
chimera_server_lib/src/config/internal/: config.rs  mod.rs
chimera_server_lib/src/config/rule/: mod.rs
chimera_server_lib/src/config/server_config/: mod.rs  quic.rs  types.rs  ws.rs
chimera_server_lib/src/config/server_config/builder/: collectors.rs  mod.rs  tls.rs
chimera_server_lib/src/grpc/: handler.rs  logger.rs  mod.rs  observatory.rs  proto.rs  routing.rs  server.rs  stats.rs
chimera_server_lib/src/handler/: dokodemo.rs  mod.rs  reality.rs  socks.rs  tls.rs  tls_deframer.rs  trojan.rs
chimera_server_lib/src/handler/hysteria2/: congestion.rs  connection.rs  mod.rs
chimera_server_lib/src/handler/tcp/: mod.rs  tcp_handler.rs  tcp_handler_util.rs
chimera_server_lib/src/handler/tuic/: e2e_tests.rs  mod.rs
chimera_server_lib/src/handler/vless_handler/: mod.rs  protocol.rs  reality_vision_stream.rs  vision.rs  vision_pad.rs  vision_stream.rs  vision_tls.rs  vision_unpad.rs
chimera_server_lib/src/handler/vmess/: crc32.rs  md5.rs  mod.rs  nonce.rs  sha2.rs  vmess_handler.rs  vmess_stream.rs
chimera_server_lib/src/handler/ws/: mod.rs  parsed_http.rs  websocket_handler.rs  websocket_stream.rs
chimera_server_lib/src/reality/: common.rs  mod.rs  reality_aead.rs  reality_auth.rs  reality_certificate.rs  reality_cipher_suite.rs  reality_client_verify.rs  reality_reader_writer.rs  reality_records.rs  reality_server_connection.rs  reality_tls13_keys.rs  reality_tls13_messages.rs  reality_util.rs  slide_buffer.rs  stream.rs
chimera_server_lib/src/reality/client/: handshake.rs  mod.rs  process.rs
chimera_server_lib/src/resolver/: mod.rs
chimera_server_lib/src/util/: bandwidth.rs  line_reader.rs  mod.rs  option.rs  prefixed_stream.rs  rustls_util.rs  socket.rs
chimera_server_lib/tests/: root_config_examples.rs  xray_compatible_examples.rs
chimera_tcp_reality_server/: Cargo.toml
chimera_tcp_reality_server/src/: main.rs
deploy/xray-xhttp/: README.md  client-config.example.json  install_client_xhttp.sh  install_server_xhttp.sh  local-ready-values.env  render_local_ready_bundle.sh  run_local_ready_stack.sh  server-config.example.json  stop_local_ready_stack.sh  test_local_xhttp_tls_compat.sh
deploy/xray-xhttp/.generated/local-ready/: client-ready.local.json  ready-bundle.env  server-ready.local.json  server.crt  server.key
examples/xray-compatible/: README.md  dokodemo-door-tcp.json5  dokodemo-door-udp-routing-blackhole.json5  dokodemo-door-udp.json5  hysteria-quic-tls.json5  socks-tcp-noauth.json5  socks-tcp-password.json5  socks-tcp-udp.json5  trojan-tcp-none.json5  trojan-tcp-tls.json5  trojan-ws-tls.json5  vless-tcp-none.json5  vless-tcp-tls-vision.json5  vless-ws-none.json5  vless-ws-tls.json5  vless-xhttp-none.json5  vless-xhttp-tls.json5  vmess-tcp-none.json5  vmess-ws-none.json5  vmess-ws-tls.json5
