[workspace]
resolver = "2"

members = [
    "chimera_server_app",
    "chimera_server_lib",
    "chimera_cli",
    "chimera_tcp_reality_server",
]

[workspace.package]
version = "0.7.1"
edition = "2024"
authors = ["chimera_rust@proton.me"]
license = "LGPL-3.0-or-later"



[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true

[workspace.dependencies]
structopt = "0.3"

tokio = { version = "1", features = ["full"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }

anyhow = "1.0"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
protoc-bin-vendored = "3"

rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"



quinn = { version = "0.11", default-features = false, features = [
    "futures-io",
    "runtime-tokio",
    "rustls",
] }

h3 = "0.0.8"
h3-quinn = "0.0.10"
http = { version = "1.4" }

bytes = "1.11"

tokio-util = { version = "0.7", features = ["net", "codec", "io", "compat"] }
futures = "0.3"
quinn-proto = "0.11.14"
rand = "0.10"

reqwest = { version = "0.13.4", default-features = false, features = [
    "blocking",
    "rustls",
] }
axum = { version = "0.8.9", features = [
    "query",
    "ws",
    "tokio",
    "tracing",
    "http1",
    "tower-log",
    "macros",
], default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.2", features = ["v4"] }

thiserror = "2"

clap = { version = "4.6.1", features = ["derive"] }

serde_json = "1.0"
serde_yaml = "0.9"
json5 = "1.3"

async-trait = "0.1"

memchr = "2"

base64 = "0.22"
aws-lc-rs = { version = "1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "aws-lc-rs",
] }

socket2 = { version = "0.6", features = ["all"] }
dashmap = "6"
lru = "0.18"
log = "0.4"
rcgen = { version = "0.14", features = ["x509-parser"] }
subtle = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
md-5 = "0.10"
sha3 = "0.10"
