[package]
name = "chimera_cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
rand_core = { version = "0.9", features = ["std"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
