[package]
name = "chimera_server_app"
version.workspace = true
edition.workspace = true

[dependencies]
chimera_server_lib = { path = "../chimera_server_lib", version = "*" }
clap = { workspace = true }


[dev-dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[features]
default = ["full"]
full = ["chimera_server_lib/full"]
