[package]
name = "chimera_server_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_server_lib = { path = "../chimera_server_lib", version = "0.5.3", default-features = false }
clap = { workspace = true }


[dev-dependencies]
aws-lc-rs = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[features]
default = ["full"]
full = ["chimera_server_lib/full"]
minimal-vless = ["chimera_server_lib/vless"]
minimal-vless-tls = ["chimera_server_lib/vless", "chimera_server_lib/tls"]
