[package]
name = "chimera_server_lib"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

async-trait = { workspace = true }

futures = { workspace = true }

memchr = { workspace = true }

base64 = { workspace = true }
aws-lc-rs = { workspace = true }
tokio-rustls = { workspace = true }

rustls = { workspace = true }
rustls-pemfile = { workspace = true }

axum = { workspace = true }
tokio-util = { workspace = true }

quinn = { workspace = true }
quinn-proto = { workspace = true }
socket2 = { workspace = true }
dashmap = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

h3-quinn = { workspace = true }
h3 = { workspace = true }
bytes = { workspace = true }

http = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true, optional = true }
subtle = { version = "2", optional = true }
x509-parser = { version = "0.18", optional = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
hysteria = []
trojan = []
ws = []
tls = []
reality = ["rcgen", "subtle", "x509-parser"]
vless = []
tuic = ["dashmap", "lru", "uuid"]
traffic = []
api = ["tonic", "prost", "prost-types", "tokio-stream"]

full = ["hysteria", "trojan", "ws", "tls", "reality", "vless", "tuic", "api"]

default = ["full"]

# default = ["trojan", "ws", "tls"]
